[gd_scene load_steps=2 format=3 uid="uid://hud"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hud")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AltLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 63.0
text = "ALT: 0 LY"

[node name="FuelLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 83.0
text = "FUEL: 100%"

[node name="PauseMenu" type="Panel" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Control/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/PauseMenu/VBox"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Control/PauseMenu/VBox"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label2" type="Label" parent="Control/PauseMenu/VBox"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Control/PauseMenu/VBox"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label3" type="Label" parent="Control/PauseMenu/VBox"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="Control/PauseMenu/VBox"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0
